# k210-hal

./: .travis.yml  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: rust.yml
ci/: script.sh
src/: aes.rs  cache.rs  clint.rs  clock.rs  dmac.rs  dvp.rs  external_pins.rs  fpioa.rs  gpio.rs  gpiohs.rs  lib.rs  peripherals.rs  plic.rs  prelude.rs  serial.rs  sha256.rs  spi.rs  stdout.rs  sysctl.rs  time.rs  timer.rs
