[package]
name = "k210-hal"
version = "0.2.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for K210 SoC"
repository = "https://github.com/riscv-rust/k210-hal"
keywords = ["riscv", "k210", "hal"]
license = "ISC"
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "0.1.1"
k210-pac = "0.2.0"
